--- a/hived/tavern/database_api_patterns/find_account_recovery_requests/tulpa.tavern.yaml
+++ b/hived/tavern/database_api_patterns/find_account_recovery_requests/tulpa.tavern.yaml
@@ -1,14 +1,14 @@
 ---
-  test_name: Hived list_limit_orders
+  test_name: Hived find_account_recovery_requests
 
   marks:
-    - patterntest
+    - patterntest # find nonempty requests
 
   includes:
     - !include ../../common.yaml
 
   stages:
-    - name: list_limit_orders
+    - name: find_account_recovery_requests
       request:
         url: "{service.url:s}"
         method: POST
@@ -17,13 +17,13 @@
         json:
           jsonrpc: "2.0"
           id: 1
-          method: "database_api.list_limit_orders"
-          params: {"start":["gtg", 1], "limit":10, "order":"by_account"}
+          method: "database_api.find_account_recovery_requests"
+          params: {"accounts":["tulpa"]}
       response:
         status_code: 200
         verify_response_with:
           function: validate_response:compare_response_with_pattern
           extra_kwargs:
-            method: "list"
-            directory: "database_api_patterns/list_limit_orders"
-            ignore_tags: ['orders']
+            method: "tulpa"
+            directory: "database_api_patterns/find_account_recovery_requests"
+            ignore_tags: ['id']
