--- a/hived/tavern/database_api_patterns/find_change_recovery_account_requests/hive_test.tavern.yaml
+++ b/hived/tavern/database_api_patterns/find_change_recovery_account_requests/hive_test.tavern.yaml
@@ -18,11 +18,12 @@
           jsonrpc: "2.0"
           id: 1
           method: "database_api.find_change_recovery_account_requests"
-          params: {"accounts": ["gtg"]}
+          params: {"accounts": ["hive.test"]}
       response:
         status_code: 200
         verify_response_with:
           function: validate_response:compare_response_with_pattern
           extra_kwargs:
-            method: "find"
+            method: "hive_test"
             directory: "database_api_patterns/find_change_recovery_account_requests"
+            ignore_tags: ['requests'] # as requests stays active for 30 days, only posibility to test is to use block limit
