--- a/hived/tavern/database_api_patterns/find_decline_voting_rights_requests/hive_test.tavern.yaml
+++ b/hived/tavern/database_api_patterns/find_decline_voting_rights_requests/hive_test.tavern.yaml
@@ -1,5 +1,5 @@
 ---
-  test_name: Hived find_account_recovery_requests
+  test_name: Hived find_decline_voting_rights_requests
 
   marks:
     - patterntest # find nonempty requests
@@ -8,7 +8,7 @@
     - !include ../../common.yaml
 
   stages:
-    - name: find_account_recovery_requests
+    - name: find_decline_voting_rights_requests
       request:
         url: "{service.url:s}"
         method: POST
@@ -17,12 +17,13 @@
         json:
           jsonrpc: "2.0"
           id: 1
-          method: "database_api.find_account_recovery_requests"
-          params: {"accounts":["hadrgames"]}
+          method: "database_api.find_decline_voting_rights_requests"
+          params: {"accounts": ["hive.test"]}
       response:
         status_code: 200
         verify_response_with:
           function: validate_response:compare_response_with_pattern
           extra_kwargs:
-            method: "find"
-            directory: "database_api_patterns/find_account_recovery_requests"
+            method: "hive_test"
+            directory: "database_api_patterns/find_decline_voting_rights_requests"
+            ignore_tags: ['requests'] # as requests stays active for 30 days, only posibility to test is to use block limit
