--- a/hived/tavern/database_api_patterns/list_account_recovery_requests/list.tavern.yaml
+++ b/hived/tavern/database_api_patterns/list_account_recovery_requests/list.tavern.yaml
@@ -22,7 +22,7 @@
       response:
         status_code: 200
         verify_response_with:
-          function: validate_response:compare_response_with_pattern
+          function: validate_response:has_valid_response
           extra_kwargs:
             method: "list"
             directory: "database_api_patterns/list_account_recovery_requests"
