--- a/hived/tavern/database_api_patterns/list_accounts/by_next_vesting_withdrawal.tavern.yaml
+++ b/hived/tavern/database_api_patterns/list_accounts/by_next_vesting_withdrawal.tavern.yaml
@@ -1,14 +1,14 @@
 ---
-  test_name: Hived find_decline_voting_rights_requests
+  test_name: Hived list_accounts
 
   marks:
-    - patterntest # find nonempty requests
+    - patterntest
 
   includes:
     - !include ../../common.yaml
 
   stages:
-    - name: find_decline_voting_rights_requests
+    - name: list_accounts
       request:
         url: "{service.url:s}"
         method: POST
@@ -17,12 +17,13 @@
         json:
           jsonrpc: "2.0"
           id: 1
-          method: "database_api.find_decline_voting_rights_requests"
-          params: {"accounts": ["gtg"]}
+          method: "database_api.list_accounts"
+          params: {"start":["2017-01-01T00:00:00", ""], "limit":10, "order":"by_next_vesting_withdrawal"}
       response:
         status_code: 200
         verify_response_with:
           function: validate_response:compare_response_with_pattern
           extra_kwargs:
-            method: "find"
-            directory: "database_api_patterns/find_decline_voting_rights_requests"
+            method: "by_next_vesting_withdrawal"
+            directory: "database_api_patterns/list_accounts"
+            ignore_tags: ['accounts']
