--- a/hived/tavern/database_api_patterns/find_proposals/find.tavern.yaml
+++ b/hived/tavern/database_api_patterns/find_proposals/find.tavern.yaml
@@ -26,3 +26,4 @@
           extra_kwargs:
             method: "find"
             directory: "database_api_patterns/find_proposals"
+            ignore_tags: ['total_votes']
