--- a/hived/tavern/account_history_api_patterns/get_account_history/default_val.tavern.yaml
+++ b/hived/tavern/account_history_api_patterns/get_account_history/default_val.tavern.yaml
@@ -26,3 +26,4 @@
           extra_kwargs:
             method: "default_val"
             directory: "account_history_api_patterns/get_account_history"
+            ignore_tags: ['history']
