--- a/hived/tavern/account_history_api_patterns/get_account_history/only_account.tavern.yaml
+++ b/hived/tavern/account_history_api_patterns/get_account_history/only_account.tavern.yaml
@@ -26,3 +26,4 @@
           extra_kwargs:
             method: "only_account"
             directory: "account_history_api_patterns/get_account_history"
+            ignore_tags: ['history']
