--- a/hivemind/tavern/bridge_api_negative/get_ranked_posts/payout_comments/observer_community.tavern.yaml
+++ b/hivemind/tavern/bridge_api_negative/get_ranked_posts/payout_comments/observer_community.tavern.yaml
@@ -1,5 +1,5 @@
 ---
-  test_name: Hivemind bridge_api.get_ranked_posts payout observer community patterns test
+  test_name: Hivemind bridge_api.get_ranked_posts payout_comments observer community patterns test
 
   marks:
     - patterntest
@@ -9,7 +9,7 @@
     - !include ../../../common.yaml
 
   stages:
-    - name: bridge_api.get_ranked_posts payout observer community patterns test
+    - name: bridge_api.get_ranked_posts payout_comments observer community patterns test
       request:
         url: "{service.proto:s}://{service.server:s}:{service.port}/"
         method: POST
@@ -19,12 +19,12 @@
           jsonrpc: "2.0"
           id: 1
           method: "bridge.get_ranked_posts"
-          params: {"sort":"payout", "tag":"my", "observer":"joeyarnoldvn", "limit":5}
+          params: {"sort":"payout_comments", "tag":"my", "observer":"joeyarnoldvn"}
       response:
         status_code: 200
         verify_response_with:
           function: validate_response:compare_response_with_pattern
           extra_kwargs:
             method: "observer_community"
-            directory: "bridge_api_patterns/get_ranked_posts/payout"
+            directory: "bridge_api_negative/get_ranked_posts/payout_comments"
             error_response: true
