get_account_history more tests

--- a/hived/tavern/account_history_api_patterns/get_account_history/hardfork_hive_restore_operation.tavern.yaml
+++ b/hived/tavern/account_history_api_patterns/get_account_history/hardfork_hive_restore_operation.tavern.yaml
@@ -1,7 +1,9 @@
 ---
   test_name: Hived account_history_api hardfork_hive_restore_operation
+  
   marks:
     - patterntest # virtual
+      # no noempty results
 
   includes:
     - !include ../../common.yaml
