--- a/hived/tavern/account_history_api_patterns/get_account_history/limit_order_create_and_cancel.tavern.yaml
+++ b/hived/tavern/account_history_api_patterns/get_account_history/limit_order_create_and_cancel.tavern.yaml
@@ -1,15 +1,14 @@
 ---
-  test_name: Hived account_history_api hardfork_operation
+  test_name: Hived account_history_api limit_order create and cancel operations
 
   marks:
-    - patterntest # virtual
-    # not assigned to the account
+    - patterntest
 
   includes:
     - !include ../../common.yaml
 
   stages:
-    - name: account_history_api hardfork_operation
+    - name: account_history_api limit_order create and cancel
       request:
         url: "{service.url:s}"
         method: POST
@@ -19,11 +18,11 @@
           jsonrpc: "2.0"
           id: 1
           method: "account_history_api.get_account_history"
-          params: {"account":"blocktrades", "operation_filter_low": 288230376151711744, "start": 1000, "limit": 1000}
+          params: {"account":"adm", "operation_filter_low": 96, "start": 10000, "limit": 1000}
       response:
         status_code: 200
         verify_response_with:
           function: validate_response:compare_response_with_pattern
           extra_kwargs:
-            method: "hardfork_operation"
+            method: "limit_order_create_and_cancel"
             directory: "account_history_api_patterns/get_account_history"
