--- a/hived/tavern/condenser_api_negative/broadcast_transaction/transaction_tapos_exception.tavern.yaml
+++ b/hived/tavern/condenser_api_negative/broadcast_transaction/transaction_tapos_exception.tavern.yaml
@@ -1,5 +1,5 @@
 ---
-  test_name: Hived broadcast_transaction_synchronous
+  test_name: Hived broadcast_transaction transaction_tapos_exception
 
   marks:
     - patterntest
@@ -8,7 +8,7 @@
     - !include ../../common.yaml
 
   stages:
-    - name: broadcast_transaction_synchronous
+    - name: broadcast_transaction transaction_tapos_exception
       request:
         url: "{service.url:s}"
         method: POST
@@ -17,7 +17,7 @@
         json:
           jsonrpc: "2.0"
           id: 1
-          method: "condenser_api.broadcast_transaction_synchronous"
+          method: "condenser_api.broadcast_transaction"
           params: [
             { 'expiration': '2020-11-05T12:58:10',
               'extensions': [ ],
@@ -38,7 +38,7 @@
         verify_response_with:
           function: validate_response:compare_response_with_pattern
           extra_kwargs:
-            method: "transaction_expiration_exception"
-            directory: "condenser_api_negative/broadcast_transaction_synchronous"
+            method: "transaction_tapos_exception"
+            directory: "condenser_api_negative/broadcast_transaction"
             error_response: true
-            ignore_tags: ['context','now']
+            ignore_tags: ['context']
