--- a/hived/tavern/condenser_api_patterns/get_market_history/300.tavern.yaml
+++ b/hived/tavern/condenser_api_patterns/get_market_history/300.tavern.yaml
@@ -1,14 +1,14 @@
 ---
-  test_name: Hived list_escrows
+  test_name: Hived get_market_history
 
   marks:
-    - patterntest
+    - patterntest # this works only for new data from less than month before now
 
   includes:
     - !include ../../common.yaml
 
   stages:
-    - name: list_escrows
+    - name: get_market_history
       request:
         url: "{service.url:s}"
         method: POST
@@ -17,12 +17,12 @@
         json:
           jsonrpc: "2.0"
           id: 1
-          method: "database_api.list_escrows"
-          params: {"start":["gtg", 1], "limit":10, "order":"by_from_id"}
+          method: "condenser_api.get_market_history"
+          params: [300,"2016-04-03T00:00:00","2031-10-20T00:00:00"]
       response:
         status_code: 200
         verify_response_with:
           function: validate_response:has_valid_response
           extra_kwargs:
-            method: "by_from_id"
-            directory: "database_api_patterns/list_escrows"
+            method: "300"
+            directory: "condenser_api_patterns/get_market_history"
