--- a/hived/tavern/condenser_api_patterns/get_market_history/3600.tavern.yaml
+++ b/hived/tavern/condenser_api_patterns/get_market_history/3600.tavern.yaml
@@ -1,14 +1,14 @@
 ---
-  test_name: Hived condenser_api.get_withdraw_routes
+  test_name: Hived get_market_history
 
   marks:
-    - patterntest
+    - patterntest # this works only for new data from less than eight months before now
 
   includes:
     - !include ../../common.yaml
 
   stages:
-    - name: condenser_api.get_withdraw_routes
+    - name: get_market_history
       request:
         url: "{service.url:s}"
         method: POST
@@ -17,12 +17,12 @@
         json:
           jsonrpc: "2.0"
           id: 1
-          method: "condenser_api.get_withdraw_routes"
-          params: ["hiveio", "outgoing"]
+          method: "condenser_api.get_market_history"
+          params: [3600,"2019-04-03T00:00:00","2031-09-06T00:00:00"]
       response:
         status_code: 200
         verify_response_with:
           function: validate_response:has_valid_response
           extra_kwargs:
-            method: "get"
-            directory: "condenser_api_patterns/get_withdraw_routes"
+            method: "3600"
+            directory: "condenser_api_patterns/get_market_history"
