--- a/hived/tavern/condenser_api_patterns/get_market_history/86400.tavern.yaml
+++ b/hived/tavern/condenser_api_patterns/get_market_history/86400.tavern.yaml
@@ -2,7 +2,7 @@
   test_name: Hived get_market_history
 
   marks:
-    - patterntest # lower bucket_seconds can be tested for full sync nodes, starting from 2020-03-03T15:00:00
+    - patterntest
 
   includes:
     - !include ../../common.yaml
@@ -22,7 +22,7 @@
       response:
         status_code: 200
         verify_response_with:
-          function: validate_response:compare_response_with_pattern
+          function: validate_response:has_valid_response
           extra_kwargs:
-            method: "get"
+            method: "86400"
             directory: "condenser_api_patterns/get_market_history"
