--- a/hived/tavern/condenser_api_patterns/get_withdraw_routes/all.tavern.yaml
+++ b/hived/tavern/condenser_api_patterns/get_withdraw_routes/all.tavern.yaml
@@ -1,15 +1,14 @@
 ---
-  test_name: Hived get_post_discussions_by_payout
+  test_name: Hived condenser_api.get_withdraw_routes all
 
   marks:
     - patterntest
-#    - xfail # _tags_api: tags_api_plugin not enabled.
 
   includes:
     - !include ../../common.yaml
 
   stages:
-    - name: get_post_discussions_by_payout
+    - name: condenser_api.get_withdraw_routes all
       request:
         url: "{service.url:s}"
         method: POST
@@ -18,12 +17,12 @@
         json:
           jsonrpc: "2.0"
           id: 1
-          method: "condenser_api.get_post_discussions_by_payout"
-          params: ["smolalit", 'simple-fractal-prostoi-fraktal']
+          method: "condenser_api.get_withdraw_routes"
+          params: ["hiveio", "all"]
       response:
         status_code: 200
         verify_response_with:
           function: validate_response:has_valid_response
           extra_kwargs:
-            method: "smolalit"
-            directory: "condenser_api_patterns/get_post_discussions_by_payout"
+            method: "outgoing"
+            directory: "condenser_api_patterns/get_withdraw_routes"
