--- a/hived/tavern/condenser_api_patterns/list_proposal_votes/proposal_expired.tavern.yaml
+++ b/hived/tavern/condenser_api_patterns/list_proposal_votes/proposal_expired.tavern.yaml
@@ -1,14 +1,14 @@
 ---
-  test_name: Hived list_escrows
+  test_name: Hived condenser_api.list_proposal_votes
 
   marks:
-    - patterntest
+    - patterntest # why it list active instead of expired?
 
   includes:
     - !include ../../common.yaml
 
   stages:
-    - name: list_escrows
+    - name: condenser_api.list_proposal_votes
       request:
         url: "{service.url:s}"
         method: POST
@@ -17,12 +17,12 @@
         json:
           jsonrpc: "2.0"
           id: 1
-          method: "database_api.list_escrows"
-          params: {"start":["gtg", 1], "limit":10, "order":"by_from_id"}
+          method: "condenser_api.list_proposal_votes"
+          params: [[10], 10, "by_proposal_voter", "ascending", "expired"]
       response:
         status_code: 200
         verify_response_with:
           function: validate_response:has_valid_response
           extra_kwargs:
-            method: "by_from_id"
-            directory: "database_api_patterns/list_escrows"
+            method: "proposal_expired"
+            directory: "condenser_api_patterns/list_proposal_votes"
