--- a/hived/tavern/condenser_api_patterns/list_proposal_votes/proposal_inactive.tavern.yaml
+++ b/hived/tavern/condenser_api_patterns/list_proposal_votes/proposal_inactive.tavern.yaml
@@ -2,7 +2,7 @@
   test_name: Hived condenser_api.list_proposal_votes
 
   marks:
-    - patterntest
+    - patterntest # why it list active instead of inactive?
 
   includes:
     - !include ../../common.yaml
@@ -18,12 +18,11 @@
           jsonrpc: "2.0"
           id: 1
           method: "condenser_api.list_proposal_votes"
-          params: [['gtg'], 10, "by_voter_proposal", "ascending", "expired"]
+          params: [[10], 10, "by_proposal_voter", "ascending", "inactive"]
       response:
         status_code: 200
         verify_response_with:
-          function: validate_response:compare_response_with_pattern
+          function: validate_response:has_valid_response
           extra_kwargs:
-            method: "get"
+            method: "proposal_inactive"
             directory: "condenser_api_patterns/list_proposal_votes"
-            ignore_tags: ['id', 'proposal', 'voter']
