--- a/hived/tavern/database_api_patterns/list_savings_withdrawals/by_from_id.tavern.yaml
+++ b/hived/tavern/database_api_patterns/list_savings_withdrawals/by_from_id.tavern.yaml
@@ -1,14 +1,14 @@
 ---
-  test_name: Hived find_account_recovery_requests
+  test_name: Hived list_savings_withdrawals by_from_id
 
   marks:
-    - patterntest # find nonempty requests
+    - patterntest
 
   includes:
     - !include ../../common.yaml
 
   stages:
-    - name: find_account_recovery_requests
+    - name: list_savings_withdrawals by_from_id
       request:
         url: "{service.url:s}"
         method: POST
@@ -17,13 +17,13 @@
         json:
           jsonrpc: "2.0"
           id: 1
-          method: "database_api.find_account_recovery_requests"
-          params: {"accounts":["tulpa"]}
+          method: "database_api.list_savings_withdrawals"
+          params: {"start":["gtg",  -1], "limit":10, "order":"by_from_id"}
       response:
         status_code: 200
         verify_response_with:
           function: validate_response:compare_response_with_pattern
           extra_kwargs:
-            method: "tulpa"
-            directory: "database_api_patterns/find_account_recovery_requests"
-            ignore_tags: ['requests']
+            method: "by_from_id"
+            directory: "database_api_patterns/list_savings_withdrawals"
+            ignore_tags: ['withdrawals']
