--- a/hived/tavern/database_api_patterns/list_vesting_delegation_expirations/by_account_expiration.tavern.yaml
+++ b/hived/tavern/database_api_patterns/list_vesting_delegation_expirations/by_account_expiration.tavern.yaml
@@ -1,5 +1,5 @@
 ---
-  test_name: Hived list_vesting_delegation_expirations
+  test_name: Hived list_vesting_delegation_expirations by_account_expiration
 
   marks:
     - patterntest
@@ -8,7 +8,7 @@
     - !include ../../common.yaml
 
   stages:
-    - name: list_vesting_delegation_expirations
+    - name: list_vesting_delegation_expirations by_account_expiration
       request:
         url: "{service.url:s}"
         method: POST
@@ -18,12 +18,12 @@
           jsonrpc: "2.0"
           id: 1
           method: "database_api.list_vesting_delegation_expirations"
-          params: {"start":["1970-01-01T00:00:00", -1], "limit":10, "order":"by_expiration"}
+          params: {"start":["gtg","1970-01-01T00:00:00", -1], "limit":10, "order":"by_account_expiration"}
       response:
         status_code: 200
         verify_response_with:
           function: validate_response:compare_response_with_pattern
           extra_kwargs:
-            method: "list"
+            method: "by_account_expiration"
             directory: "database_api_patterns/list_vesting_delegation_expirations"
             ignore_tags: ['delegations']
