--- a/hivemind/tavern/condenser_api_patterns/get_state/trending_asia.tavern.yaml
+++ b/hivemind/tavern/condenser_api_patterns/get_state/trending_asia.tavern.yaml
@@ -2,7 +2,9 @@
   test_name: Hivemind condenser_api.get_state patterns test # Deprecated
 
   marks:
-    - patterntest
+    - patterntest # there are differences against orig. pattern i.e. for post "sweetsssj/a-chinese-twist-on-japanese-cuisine"
+                  # since new HM version has a problem in handling tags during post edits. New version does merge of tags specified
+                  # at each edit where old one replaced them.
 
   includes:
     - !include ../../common.yaml
