[ABW]: accepted differences due to vote muting since it was removed accepted difference in list_votes with vote on deleted post added test with skipped default parameters for get_account_reputations

--- a/hivemind/tavern/bridge_api_patterns/get_account_posts/feed/proskynneo.tavern.yaml
+++ b/hivemind/tavern/bridge_api_patterns/get_account_posts/feed/proskynneo.tavern.yaml
@@ -2,9 +2,7 @@
   test_name: Hivemind bridge_api.get_account_posts sort feed patterns test
 
   marks:
-    - patterntest # since original only gives posts from last month (counted from now()) there can be no nonempty results
-    - failing
-    - xfail # marked as failing for now, since we need to change it so it counts time from head block
+    - patterntest # original only gives posts from last month (counted from now()) so there can be no nonempty results
 
   includes:
     - !include ../../../common.yaml
