--- a/hivemind/tavern/condenser_api_patterns/get_discussions_by_promoted/tag_steemit.tavern.yaml
+++ b/hivemind/tavern/condenser_api_patterns/get_discussions_by_promoted/tag_steemit.tavern.yaml
@@ -6,8 +6,7 @@
                   # note post /life/@thecryptofiend/things-i-wish-i-d-known-when-i-was-18
                   # it is in the results despite not having 'steemit' in 'tags'
                   # it is because the post was edited and was changing tags - we don't clear old tags during edit (should be fixed at some point)
-    - failing
-    - xfail # extra votes due to muting not working
+                  # compared to original extra votes are due to removed vote muting
 
   includes:
     - !include ../../common.yaml
