--- a/hivemind/tavern/bridge_api_negative/get_ranked_posts/trending/my_observer.tavern.yaml
+++ b/hivemind/tavern/bridge_api_negative/get_ranked_posts/trending/my_observer.tavern.yaml
@@ -2,7 +2,8 @@
   test_name: Hivemind bridge_api.get_ranked_posts trending observer patterns test
 
   marks:
-    - patterntest
+    - patterntest # original did not validate observer
+    - negative
 
   includes:
     - !include ../../../common.yaml
@@ -25,4 +26,5 @@
           function: validate_response:compare_response_with_pattern
           extra_kwargs:
             method: "my_observer"
-            directory: "bridge_api_patterns/get_ranked_posts/trending"
+            directory: "bridge_api_negative/get_ranked_posts/trending"
+            error_response: true
