--- a/hivemind/tavern/condenser_api_patterns/get_discussions_by_hot/max_limit.tavern.yaml
+++ b/hivemind/tavern/condenser_api_patterns/get_discussions_by_hot/max_limit.tavern.yaml
@@ -3,8 +3,7 @@
 
   marks:
     - patterntest # replies were also put in results in original version (but TODO suggested it was to be changed, now only top posts can be hot)
-    - failing
-    - xfail # extra vote due to muting not working
+                  # compared to original extra vote is due to removed vote muting
 
   includes:
     - !include ../../common.yaml
