--- a/hivemind/tavern/condenser_api_patterns/get_post_discussions_by_payout/truncated.tavern.yaml
+++ b/hivemind/tavern/condenser_api_patterns/get_post_discussions_by_payout/truncated.tavern.yaml
@@ -2,9 +2,7 @@
   test_name: Hivemind condenser_api.get_post_discussions_by_payout limit 20 test
 
   marks:
-    - patterntest # same as limit 20, but with truncated posts
-    - failing
-    - xfail # extra vote as usual
+    - patterntest # compared to original extra vote is due to removed vote muting
 
   includes:
     - !include ../../common.yaml
