--- a/hivemind/tavern/condenser_api_negative/get_replies_by_last_update/bad_author.tavern.yaml
+++ b/hivemind/tavern/condenser_api_negative/get_replies_by_last_update/bad_author.tavern.yaml
@@ -1,15 +1,15 @@
 ---
-  test_name: Hivemind condenser_api.get_replies_by_last_update patterns test
+  test_name: Hivemind condenser_api.get_replies_by_last_update no results patterns test
 
   marks:
-    - patterntest # original made overlapping pages, that was corrected
-                  # (compare with steemit.tavern.yaml - @admin/firstpost is the last - oldest - reply to any post by steemit, therefore there is nothing on page defined by it)
+    - patterntest # original did not validate author, just gave empty results
+    - negative
 
   includes:
     - !include ../../common.yaml
 
   stages:
-    - name: get_replies_by_last_update
+    - name: get_replies_by_last_update no results
       request:
         url: "{service.proto:s}://{service.server:s}:{service.port}/"
         method: POST
@@ -19,11 +19,12 @@
           jsonrpc: "2.0"
           id: 1
           method: "condenser_api.get_replies_by_last_update"
-          params: ["admin","firstpost",1]
+          params: ["nonexisting","",1]
       response:
         status_code: 200
         verify_response_with:
           function: validate_response:compare_response_with_pattern
           extra_kwargs:
-            method: "admin"
-            directory: "condenser_api_patterns/get_replies_by_last_update"
+            method: "bad_author"
+            directory: "condenser_api_negative/get_replies_by_last_update"
+            error_response: true
