--- a/hivemind/tavern/condenser_api_negative/get_followers/the_same_account_start.tavern.yaml
+++ b/hivemind/tavern/condenser_api_negative/get_followers/the_same_account_start.tavern.yaml
@@ -2,7 +2,7 @@
   test_name: Hivemind condenser_api.get_followers patterns test
 
   marks:
-    - patterntest # original always included page defining account in results (and order of follows created in the same time was basically random), that was corrected
+    - patterntest 
 
   includes:
     - !include ../../common.yaml
