--- a/hivemind/tavern/condenser_api_negative/get_reblogged_by/deleted_reply.tavern.yaml
+++ b/hivemind/tavern/condenser_api_negative/get_reblogged_by/deleted_reply.tavern.yaml
@@ -1,14 +1,14 @@
 ---
-  test_name: Hivemind condenser_api.get_followers patterns test
+  test_name: Hivemind condenser_api.get_reblogged_by patterns test
 
   marks:
-    - patterntest
+    - patterntest # bug in old HM
 
   includes:
     - !include ../../common.yaml
 
   stages:
-    - name: get_followers
+    - name: get_reblogged_by
       request:
         url: "{service.proto:s}://{service.server:s}:{service.port}/"
         method: POST
@@ -17,12 +17,13 @@
         json:
           jsonrpc: "2.0"
           id: 1
-          method: "condenser_api.get_followers"
-          params: {"account":"roadscape","start":"roadscape","limit":3}
+          method: "condenser_api.get_reblogged_by"
+          params: {"author":"gardenlady","permlink":"re-steemychicken1-re-andrarchy-steemit-slogan-competition-20160625t015635752z"}
       response:
         status_code: 200
         verify_response_with:
           function: validate_response:compare_response_with_pattern
           extra_kwargs:
-            method: "the_same_account_start"
-            directory: "condenser_api_negative/get_followers"
+            method: "deleted_reply"
+            directory: "condenser_api_negative/get_reblogged_by"
+            error_response: true
