--- a/hivemind/tavern/condenser_api_patterns/get_replies_by_last_update/pre_appbase.tavern.yaml
+++ b/hivemind/tavern/condenser_api_patterns/get_replies_by_last_update/pre_appbase.tavern.yaml
@@ -2,7 +2,7 @@
   test_name: Hivemind condenser_api.get_replies_by_last_update pre_appbase patterns test
 
   marks:
-    - patterntest
+    - patterntest # see abit.tavern.yaml
 
   includes:
     - !include ../../common.yaml
@@ -18,7 +18,7 @@
           jsonrpc: "2.0"
           id: 1
           method: "call"
-          params: ["condenser_api", "get_replies_by_last_update", ["admin","firstpost",1]]
+          params: ["condenser_api", "get_replies_by_last_update", ["abit","re-summersolstice-cabbage-moths--cheap-solutions-20160525t114306407z",10]]
       response:
         status_code: 200
         verify_response_with:
