--- a/hivemind/tavern/condenser_api_patterns/get_replies_by_last_update/truncated.tavern.yaml
+++ b/hivemind/tavern/condenser_api_patterns/get_replies_by_last_update/truncated.tavern.yaml
@@ -1,9 +1,8 @@
 ---
-  test_name: Hivemind condenser_api.get_replies_by_last_update patterns test
+  test_name: Hivemind condenser_api.get_replies_by_last_update limit 100 patterns test
 
   marks:
-    - patterntest # original made overlapping pages, that was corrected
-                  # (compare with steemit.tavern.yaml - @admin/firstpost is the last - oldest - reply to any post by steemit, therefore there is nothing on page defined by it)
+    - patterntest
 
   includes:
     - !include ../../common.yaml
@@ -19,11 +18,11 @@
           jsonrpc: "2.0"
           id: 1
           method: "condenser_api.get_replies_by_last_update"
-          params: ["admin","firstpost",1]
+          params: ["gtg","",100,10]
       response:
         status_code: 200
         verify_response_with:
           function: validate_response:compare_response_with_pattern
           extra_kwargs:
-            method: "admin"
+            method: "truncated"
             directory: "condenser_api_patterns/get_replies_by_last_update"
