--- a/hived/tavern/database_api_patterns/list_proposal_votes/by_voter_proposal_inactive.tavern.yaml
+++ b/hived/tavern/database_api_patterns/list_proposal_votes/by_voter_proposal_inactive.tavern.yaml
@@ -26,4 +26,4 @@
           extra_kwargs:
             method: "by_voter_proposal_inactive"
             directory: "database_api_patterns/list_proposal_votes"
-            ignore_tags: ['total_votes']
+            ignore_tags: ['proposal_votes']
