[ABW]: patterns changed to match blacklists from mock data: in some cases xfail tests changed to positive because mocks matched in some cases blacklists had to be supplemented (since old solution was based on external service, results depended on when the call for .orig file was made) one test is new xfail since it showed newly discovered problem with concurrent follows of different types

--- a/hivemind/tavern/bridge_api_patterns/get_ranked_posts/created/max_limit.tavern.yaml
+++ b/hivemind/tavern/bridge_api_patterns/get_ranked_posts/created/max_limit.tavern.yaml
@@ -2,10 +2,7 @@
   test_name: Hivemind bridge_api.get_ranked_posts maximum limit patterns test
 
   marks:
-    - patterntest
-    - failing
-    - xfail # blacklists - we should most likely setup service for blacklists that will be unchanging and used by both hive-3 and CI,
-            # otherwise even if we correctly handle blacklists those might fail when situation changes or external service stops working
+    - patterntest # blacklists matched with mock data
 
   includes:
     - !include ../../../common.yaml
