--- a/hivemind/tavern/bridge_api_patterns/get_ranked_posts/promoted/max_limit.tavern.yaml
+++ b/hivemind/tavern/bridge_api_patterns/get_ranked_posts/promoted/max_limit.tavern.yaml
@@ -3,6 +3,7 @@
 
   marks:
     - patterntest # incomparable with original as now not only replies but top posts are in results as well (pattern accepted as-is, too big to create manually)
+                  # blacklists matched with mock data
 
   includes:
     - !include ../../../common.yaml
