--- a/hivemind/tavern/bridge_api_patterns/get_profile/davr86_with_observer.tavern.yaml
+++ b/hivemind/tavern/bridge_api_patterns/get_profile/davr86_with_observer.tavern.yaml
@@ -1,8 +1,8 @@
 ---
   test_name: Hivemind bridge_api.get_profile davr86 with observer patterns test
-  # observer has no effect on 5 mln blocks because there is no users blacklisted, only has context "followed": false
+
   marks:
-    - patterntest
+    - patterntest # observer would have no effect on 5 mln blocks but mock data added necessary follows
 
   includes:
     - !include ../../common.yaml
@@ -18,7 +18,7 @@
           jsonrpc: "2.0"
           id: 1
           method: "bridge.get_profile"
-          params: {"account":"davr86","observer":"gtg"}
+          params: {"account":"davr86","observer":"ignoreall"}
       response:
         status_code: 200
         verify_response_with:
