--- a/hivemind/tavern/bridge_api_patterns/get_ranked_posts/promoted/tag_all.tavern.yaml
+++ b/hivemind/tavern/bridge_api_patterns/get_ranked_posts/promoted/tag_all.tavern.yaml
@@ -3,8 +3,7 @@
 
   marks:
     - patterntest # change in behaviour compared to original, not only replies are in results, but top posts as well (initial pattern created with get_post calls)
-    - failing
-    - xfail # blacklists - see max_limit.tavern.yaml in ../created
+                  # differences in blacklists are caused by lack of global/default blacklist - observer always needed
 
   includes:
     - !include ../../../common.yaml
