--- a/hivemind/tavern/bridge_api_patterns/get_ranked_posts/created/my_gtg_limit_1.tavern.yaml
+++ b/hivemind/tavern/bridge_api_patterns/get_ranked_posts/created/my_gtg_limit_1.tavern.yaml
@@ -2,7 +2,8 @@
   test_name: Hivemind bridge_api.get_ranked_posts created my gtg limit 1 patterns test
 
   marks:
-    - patterntest # communities not implemented under 5 mln blocks
+    - patterntest
+  # Communities not implemented under 5 mln blocks, but some were created by mock mechanism.
 
   includes:
     - !include ../../../common.yaml
