--- a/hivemind/tavern/bridge_api_patterns/get_ranked_posts/created/observer_alice.tavern.yaml
+++ b/hivemind/tavern/bridge_api_patterns/get_ranked_posts/created/observer_alice.tavern.yaml
@@ -1,5 +1,7 @@
 ---
   test_name: Hivemind bridge_api.get_ranked_posts created patterns test
+  # Communities not implemented under 5 mln blocks, but some were created by mock mechanism.
+  # For these communities some posts were created, therefore an original result is different from original pattern.
 
   marks:
     - patterntest
