--- a/hivemind/tavern/bridge_api_patterns/get_trending_topics/empty.tavern.yaml
+++ b/hivemind/tavern/bridge_api_patterns/get_trending_topics/empty.tavern.yaml
@@ -3,7 +3,7 @@
       # not documented on https://developers.hive.io/apidefinitions/#apidefinitions-bridge
   marks:
     - patterntest
-
+    # Communities not implemented under 5 mln blocks, but some were created by mock mechanism, therefore they are in result.
   includes:
     - !include ../../common.yaml
 
