--- a/hivemind/tavern/condenser_api_patterns/get_discussions_by_created/max_limit.tavern.yaml
+++ b/hivemind/tavern/condenser_api_patterns/get_discussions_by_created/max_limit.tavern.yaml
@@ -4,6 +4,9 @@
   marks:
     - patterntest
 
+  # Communities not implemented under 5 mln blocks, but some were created by mock mechanism.
+  # For these communities some posts were created, therefore an original result is different from original pattern.
+
   includes:
     - !include ../../common.yaml
 
