--- a/hivemind/tavern/condenser_api_patterns/get_state/blog_abit.tavern.yaml
+++ b/hivemind/tavern/condenser_api_patterns/get_state/blog_abit.tavern.yaml
@@ -4,6 +4,10 @@
   marks:
     - patterntest
 
+  # Communities not implemented under 5 mln blocks, but some were created by mock mechanism.
+  # For these communities some posts were created, therefore an original result is different from original pattern.
+  # For these communities for account `abit` were created 2 artificial comments. Permlinks: `anaconda01`, `anaconda02`
+
   includes:
     - !include ../../common.yaml
 
