--- a/hivemind/tavern/condenser_api_patterns/get_state/comments_blocktrades.tavern.yaml
+++ b/hivemind/tavern/condenser_api_patterns/get_state/comments_blocktrades.tavern.yaml
@@ -4,6 +4,11 @@
   marks:
     - patterntest
 
+  # Communities not implemented under 5 mln blocks, but some were created by mock mechanism.
+  # For these communities some posts were created, therefore an original result is different from original pattern.
+  # Earlier: "post_count": 355 Now: "post_count": 358
+  # For these communities for account `blocktrades` were created 3 artificial comments. Permlinks: `crocodile01`, `crocodile02`, `crocodile03`
+
   includes:
     - !include ../../common.yaml
 
