Fixed syntax error in yaml test def

--- a/hivemind/tavern_full_sync/bridge_api_patterns/get_account_posts/replies/jeffjagoe.tavern.yaml
+++ b/hivemind/tavern_full_sync/bridge_api_patterns/get_account_posts/replies/jeffjagoe.tavern.yaml
@@ -4,7 +4,7 @@
   marks:
     - fullsynctest # slow_calls file - 3.168s
 
-  includes:`
+  includes:
     - !include ../../../common.yaml
 
   stages:
